base working ForgeGradle setup, already working  testmod